2005-01-26  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.

	2005-01-25  Ito Kazumitsu  <kaz@maczuka.gcd.org>

        * java/text/SimpleDateFormat.java:
        (parse): Use offset to set ZONE_OFFSET
        rather than the DST_OFFSET, so that
        GMT offset timezones change the right
        one.

2005-01-26  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.

	2005-01-25  Michael Koch  <konqueror@gmx.de>

        * javax/swing/DefaultCellRenderer.java: Removed.

2005-01-26  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.

	2005-01-25  Michael Koch  <konqueror@gmx.de>

        * javax/swing/AbstractButton.java
        (fireItemStateChanged): Made protected.
        (fireActionPerformed): Likewise.
        (fireStateChanged): Likewise.
        * javax/swing/DefaultButtonModel.java
        (fireItemStateChanged): Likewise.
        (fireActionPerformed): Likewise.
        (fireStateChanged): Likewise.
        * javax/swing/JApplet.java
        (JApplet): Removed.
        (frameInit): Likewise.
        (setRootPane): Made protected.
        (createRootPane): Likewise.
        * javax/swing/JComponent.java
        (getClientProperty): Likewise.
        (putClientProperty): Likewise.
        * javax/swing/JEditorPane.java
        (getContentType): Likewise.
        (setContentType): Likewise.
        * javax/swing/JFrame.java
        (setRootPane): Likewise.
        (createRootPane): Likewise.
        * javax/swing/JInternalFrame.java
        (getFocusCycleRootAncestor): Made final. Added @since tag.
        (isFocusCycleRoot): Likewise.
        (getWarningString): Made final.
        * javax/swing/JScrollBar.java
        (changeListener): Removed.
        (changeEvent): Likewise.
        (createChangeListener): Likewise.
        (fireStateChanged): Likewise.
        (addChangeListener): Likewise.
        (removeChangeListener): Likewise.
        (getChangeListeners): Likewise.